--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       data.forEach(file => {
         const listItem = document.createElement('li');
         const link = document.createElement('a');
-        link.href = `https://jakenangle.github.io/jakenangle.github.io/${file.name}`;
+        link.href = `https://jakenangle.github.io/jakenangle.github.io/${file.path}`;
         link.textContent = file.name;
         listItem.appendChild(link);
         fileList.appendChild(listItem);
